--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,44 @@
-<p>Hello</p>
+<div class="control-section">
+  <div align='center'>
+    <ejs-maps
+      id='container'
+      style="display:block;"
+      [layers]='layers'
+      (load)="load($event)"
+      [zoomSettings]="zoomSettings"
+      [titleSettings]="titleSettings"
+      [centerPosition]='centerPosition'
+    ></ejs-maps>
+  </div>
+</div>
+<style>
+  #popuposm_dialog-content {
+    display: none !important
+  }
+
+  #popuposm_title {
+    font-size: 14px !important
+  }
+
+  .osmpopup {
+    position: relative;
+    background-color: white;
+  }
+
+  .osmpopup:after {
+    content: '';
+    position: absolute;
+    top: 170%;
+    left: 50%;
+    width: 0;
+    height: 0;
+    margin-left: -35px;
+    border-top: solid 20px white;
+    border-left: solid 20px transparent;
+    border-right: solid 20px transparent;
+  }
+
+  #osmdialog .e-popup {
+    min-width: 100px !important
+  }
+</style>
