Added navbar and center map

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,1 +1,9 @@
-<p>Navbar</p>
+<nav class="nav">
+  <ul class="nav__list">
+    <li class="nav__item">
+      <a class="nav__link">
+        Login
+      </a>
+    </li>
+  </ul>
+</nav>
