--- a/frontend/src/app/map/map.component.scss
+++ b/frontend/src/app/map/map.component.scss
@@ -1,14 +1,8 @@
 .map-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: 30px;
+  height: calc(100% - 50px);
 }
 
 .map-frame {
-  border: 2px solid black;
   height: 100%;
 }
 
