Added rounting to move to login page

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,7 +1,12 @@
 <nav class="nav">
   <ul class="nav__list">
     <li class="nav__item">
-      <a class="nav__link">
+      <a class="nav__link" routerLink="/">
+        Start
+      </a>
+    </li>
+    <li class="nav__item">
+      <a class="nav__link" routerLink="/login">
         Login
       </a>
     </li>
