--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <nav class="nav">
   <ul class="nav__list">
-    <li class="nav__item">
-      <a class="nav__link" routerLink="/">
+    <li class="nav__item" routerLink="/">
+      <a class="nav__link">
         Start
       </a>
     </li>
-    <li class="nav__item">
-      <a class="nav__link" routerLink="/login">
+    <li class="nav__item" routerLink="/login">
+      <a class="nav__link">
         Login
       </a>
     </li>
