--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<!-- Modal Content -->
+<form class="modal-content animate" action="/action_page.php">
+      <div class="imgcontainer">
+        <img src="assets/img/ship.jpg" alt="Avatar" class="avatar">
+      </div>
+
+  <div class="container">
+    <label for="uname"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" id="uname" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" id="psw" required>
+
+    <button type="submit">Login</button>
+    <label>
+      <input type="checkbox" checked="checked" name="remember"> Remember me
+    </label>
+  </div>
+
+  <div class="container" style="background-color:#f1f1f1">
+    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel
+    </button>
+    <span class="psw">Forgot <a href="#">password?</a></span>
+  </div>
+</form>
