--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -8,7 +8,7 @@
   &__list {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: space-between;
     height: 100%;
     margin: 0;
     padding: 0 20px;
