--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,13 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="app__navbar">
+
+</div>
+<div class="app__panel">
+
+</div>
+<div class="app__map">
+  <app-map></app-map>
+</div>
+
+
+<!--<app-navbar></app-navbar>-->
+<!--<router-outlet></router-outlet>-->
