Added items to navbar

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,19 @@
 <div class="app__navbar">
+  <div class="navbar">
+    <div class="navbar__item">
 
+    </div>
+    <div class="navbar__item">
+
+    </div>
+    <div class="navbar__item">
+
+    </div>
+
+  </div>
+  <div class="navbar__item">
+
+  </div>
 </div>
 <div class="app__panel">
 
