--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="app__navbar">
   <div class="navbar">
     <div class="navbar__item">
-
+      <div class="navbar__link">
+        <div class="material-icons-outlined md-24">map</div>
+        <div class="navbar__text">Mapa</div>
+      </div>
     </div>
     <div class="navbar__item">
 
