Added login button

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,16 +6,12 @@
         <div class="navbar__text">Mapa</div>
       </div>
     </div>
-    <div class="navbar__item">
-
-    </div>
-    <div class="navbar__item">
-
-    </div>
-
   </div>
   <div class="navbar__item">
-
+    <div class="navbar__link">
+      <div class="material-icons-outlined md-24">person</div>
+      <div class="navbar__text">Login</div>
+    </div>
   </div>
 </div>
 <div class="app__panel">
