--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,16 +16,16 @@
     </div>
     <div class="navbar__item" (click)="togglePanel()">
       <div class="navbar__link">
-        <div  [ngClass]="panelShown ? 'panel-button-show' : 'panel-button-hide'" class="material-icons-outlined md-24">login</div>
+        <div [ngClass]="isPanelShown ? 'panel-button-show' : 'panel-button-hide'" class="material-icons-outlined md-24">login</div>
       </div>
     </div>
   </div>
 </div>
-<div [ngClass]="panelShown ? 'app__panel-show' : 'app__panel-hide'">
+<div [ngClass]="isPanelShown ? 'app__panel-show' : 'app__panel-hide'">
 
 </div>
-<div [ngClass]="panelShown ? 'app__map-show' : 'app__map-hide'">
-  <app-map></app-map>
+<div [ngClass]="isPanelShown ? 'app__map-show' : 'app__map-hide'">
+  <app-map [resizeMap]="isPanelShownSubject"></app-map>
 </div>
 
 
