--- a/frontend/src/app/map/map.component.scss
+++ b/frontend/src/app/map/map.component.scss
@@ -1,11 +1,17 @@
 .map-container {
+  width: 100%;
   height: 100%;
 }
 
 .map-frame {
+  width: 100%;
   height: 100%;
+  position: relative;
 }
 
 #map {
-  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
