--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,30 +1,15 @@
-<div class="login">
-  <form class="login__form">
-
-  </form>
-</div>
-<form class="modal-content" action="/barentswatch/client/token">
-  <div class="imgcontainer">
-    <img src="assets/img/ship.jpg" alt="Vessel" class="avatar">
-  </div>
-
-  <div class="container">
-    <label for="email">
+<div style="display: table; height: 100%; width: 100%;">
+  <form class="login-form">
+    <label for="email" class="login-form__email-label">
       <strong>Email</strong>
     </label>
-    <input type="text" placeholder="Enter Email" id="email" required>
+    <input type="text" placeholder="Enter Email" id="email" class="login-form__email" required>
 
-    <label for="password">
+    <label for="password" class="login-form__password-label">
       <strong>Password</strong>
     </label>
-    <input type="password" placeholder="Enter Password" id="password" required>
+    <input type="password" placeholder="Enter Password" id="password" class="login-form__password" required>
 
-    <button type="submit">Login</button>
-  </div>
-
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel
-    </button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>
-</form>
+    <button type="button" class="login-form__login-button">Login</button>
+  </form>
+</div>
