--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -1,81 +1,39 @@
-.login {
-  height: calc(100% - 50px);
-
-  &__form {
-    height: 600px;
-    max-width: 400px;
-    margin: 50px auto 0;
-    background: #2c2d3a;
-  }
-}
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
-
-.container {
-  padding: 16px;
-}
-
-/* Full-width input fields */
-input[type=text], input[type=password] {
+.login-form {
+  display: table-cell;
+  vertical-align: middle;
   width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-/* Set a style for all buttons */
-button {
-  background-color: #04AA6D;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-/* Extra styles for the cancel button */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
-
-/* Center the image and position the close button */
-.imgcontainer {
+  height: 100%;
+  max-width: 400px;
   text-align: center;
-  margin: 24px 0 12px 0;
-  position: relative;
-}
+  color: white;
+  font-size: 1.5rem;
 
-img.avatar {
-  width: 20%;
-}
+  &__email {
+    @extend .login-input;
 
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-    display: block;
-    float: none;
+    &-label {
+      @extend .login-label;
+    }
   }
-  .cancelbtn {
-    width: 100%;
+
+  &__password {
+    @extend .login-input;
+
+    &-label {
+      @extend .login-label;
+    }
   }
+
+  &__login-button {
+
+  }
+}
+
+.login-input {
+  display: block;
+  margin: 15px auto;
+}
+
+.login-label {
+
 }
