--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -3,12 +3,12 @@
     <label for="email" class="login-form__email-label">
       <strong>Email</strong>
     </label>
-    <input type="text" placeholder="Enter Email" id="email" class="login-form__email" required>
+    <input type="text" id="email" class="login-form__email" required>
 
     <label for="password" class="login-form__password-label">
       <strong>Password</strong>
     </label>
-    <input type="password" placeholder="Enter Password" id="password" class="login-form__password" required>
+    <input type="password"   id="password" class="login-form__password" required>
 
     <button type="button" class="login-form__login-button">Login</button>
   </form>
