Added routing for panel

--- a/frontend/src/app/panels/login-panel/login-panel.component.html
+++ b/frontend/src/app/panels/login-panel/login-panel.component.html
@@ -1,4 +1,4 @@
-<div style="display: table; height: 100%; width: 100%;">
+<div class="login-panel">
   <form class="login-form">
     <label for="email" class="login-form__email-label">
       <strong>Email</strong>
