--- a/frontend/src/app/panels/map-panel/map-panel.component.html
+++ b/frontend/src/app/panels/map-panel/map-panel.component.html
@@ -1,15 +1,11 @@
-<div style="display: table; height: 100%; width: 100%;">
-  <form class="login-form">
-    <label for="email" class="login-form__email-label">
-      <strong>Email</strong>
-    </label>
-    <input type="text" id="email" class="login-form__email" required>
-
-    <label for="password" class="login-form__password-label">
-      <strong>Password</strong>
-    </label>
-    <input type="password"   id="password" class="login-form__password" required>
-
-    <button type="button" class="login-form__login-button">Login</button>
-  </form>
+<div class="map-panel">
+  <div class="map-info">
+    <span>On the map you can see tracked vessels</span>
+    <ul>
+      <li>blue</li>
+      <li>yellow</li>
+      <li>red</li>
+      <li>purple</li>
+    </ul>
+  </div>
 </div>
