--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app__navbar">
   <div class="navbar">
     <div class="navbar__item">
-      <div class="navbar__link">
+      <div class="navbar__link" routerLink="/">
         <div class="material-icons-outlined md-24">map</div>
         <div class="navbar__text">Mapa</div>
       </div>
@@ -9,7 +9,7 @@
   </div>
   <div class="navbar__group">
     <div class="navbar__item">
-      <div class="navbar__link">
+      <div class="navbar__link" routerLink="/login">
         <div class="material-icons-outlined md-24">person</div>
         <div class="navbar__text">Login</div>
       </div>
@@ -22,7 +22,7 @@
   </div>
 </div>
 <div [ngClass]="isPanelShown ? 'app__panel-show' : 'app__panel-hide'">
-  <app-login></app-login>
+  <router-outlet></router-outlet>
 </div>
 <div [ngClass]="isPanelShown ? 'app__map-show' : 'app__map-hide'">
   <app-map [resizeMap]="isPanelShownSubject"></app-map>
@@ -30,4 +30,4 @@
 
 
 <!--<app-navbar></app-navbar>-->
-<!--<router-outlet></router-outlet>-->
+<!---->
