--- a/frontend/src/app/toolbar/toolbar.component.html
+++ b/frontend/src/app/toolbar/toolbar.component.html
@@ -1,1 +1,23 @@
-<p>Toolbar</p>
+<div class="app__toolbar">
+  <div class="toolbar">
+    <div class="toolbar__item">
+      <div class="toolbar__link" routerLink="/">
+        <div class="material-icons-outlined md-24">map</div>
+        <div class="toolbar__text">Mapa</div>
+      </div>
+    </div>
+  </div>
+  <div class="toolbar__group">
+    <div class="toolbar__item">
+      <div class="toolbar__link" routerLink="/login">
+        <div class="material-icons-outlined md-24">person</div>
+        <div class="toolbar__text">Login</div>
+      </div>
+    </div>
+    <div class="toolbar__item" (click)="togglePanel()">
+      <div class="toolbar__link">
+        <div [ngClass]="isPanelShown ? 'panel-button-show' : 'panel-button-hide'" class="material-icons-outlined md-24">login</div>
+      </div>
+    </div>
+  </div>
+</div>
