--- a/frontend/src/app/toolbar/toolbar.component.html
+++ b/frontend/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div class="app__toolbar">
+<div class="main-toolbar">
   <div class="toolbar">
     <div class="toolbar__item">
       <div class="toolbar__link" routerLink="/">
