--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-toolbar (panelShownEvent)="handlePanelShownEvent($event)"></app-toolbar>
+<div class="app__toolbar">
+  <app-toolbar (panelShownEvent)="handlePanelShownEvent($event)"></app-toolbar>
+</div>
 <div [ngClass]="isPanelShown ? 'app__panel-show' : 'app__panel-hide'">
   <router-outlet></router-outlet>
 </div>
