--- a/frontend/src/app/components/toolbar/toolbar.component.html
+++ b/frontend/src/app/components/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <div class="toolbar__item">
       <div class="toolbar__link" routerLink="/">
         <div class="material-icons-outlined md-24">map</div>
-        <div class="toolbar__text">Mapa</div>
+        <div class="toolbar__text">Map</div>
       </div>
     </div>
   </div>
