--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -11,6 +11,7 @@ $hide-panel-timing: .5s;
 
 .app__panel {
   position: absolute;
+  overflow-y: auto;
   height: 100%;
   background-image: linear-gradient(to right, #65667a, #444554);
   left: $toolbar-width;
