Enabled to use login form

--- a/frontend/src/app/components/panels/login-panel/login-panel.component.scss
+++ b/frontend/src/app/components/panels/login-panel/login-panel.component.scss
@@ -58,6 +58,7 @@
   font-size: 1.2rem;
   border: 0;
   border-bottom: 2px solid white;
+  color: white;
   text-align: center;
   font-family: inherit !important;
 
