--- a/frontend/src/app/components/panels/login-panel/login-panel.component.html
+++ b/frontend/src/app/components/panels/login-panel/login-panel.component.html
@@ -1,15 +1,15 @@
 <div class="login-panel">
-  <form class="login-form">
+  <form class="login-form" (ngSubmit)="login()">
     <label for="email" class="login-form__email-label">
       <strong>Email</strong>
     </label>
-    <input type="text" id="email" class="login-form__email" required>
+    <input type="text" id="email" [(ngModel)]="email" class="login-form__email" name="email" required>
 
     <label for="password" class="login-form__password-label">
       <strong>Password</strong>
     </label>
-    <input type="password"   id="password" class="login-form__password" required>
+    <input type="password" id="password" [(ngModel)]="password" class="login-form__password" name="password" required>
 
-    <button type="button" class="login-form__login-button">Login</button>
+    <button type="submit" class="login-form__login-button">Login</button>
   </form>
 </div>
