Created possibility to log in

--- a/frontend/src/app/components/toolbar/toolbar.component.html
+++ b/frontend/src/app/components/toolbar/toolbar.component.html
@@ -6,12 +6,24 @@
         <div class="toolbar__text">Map</div>
       </div>
     </div>
+    <div class="toolbar__item" *ngIf="loggedUser">
+      <div class="toolbar__link" routerLink="/">
+        <div class="material-icons-outlined md-24">computer</div>
+        <div class="toolbar__text">App</div>
+      </div>
+    </div>
   </div>
-  <div class="toolbar__group">
-    <div class="toolbar__item">
+  <div class="toolbar">
+    <div class="toolbar__item" *ngIf="!loggedUser">
       <div class="toolbar__link" routerLink="/login">
         <div class="material-icons-outlined md-24">person</div>
         <div class="toolbar__text">Login</div>
+      </div>
+    </div>
+    <div class="toolbar__item" *ngIf="loggedUser">
+      <div class="toolbar__link" (click)="logout()">
+        <div class="material-icons-outlined md-24">power_settings_new</div>
+        <div class="toolbar__text">Logout</div>
       </div>
     </div>
     <div class="toolbar__item" (click)="togglePanel()">
