Added app panel

--- a/frontend/src/app/components/toolbar/toolbar.component.html
+++ b/frontend/src/app/components/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
       </div>
     </div>
     <div class="toolbar__item" *ngIf="loggedUser">
-      <div class="toolbar__link" routerLink="/">
+      <div class="toolbar__link" routerLink="/app">
         <div class="material-icons-outlined md-24">computer</div>
         <div class="toolbar__text">App</div>
       </div>
