--- a/frontend/src/app/components/panels/map-panel/map-panel.component.html
+++ b/frontend/src/app/components/panels/map-panel/map-panel.component.html
@@ -18,7 +18,7 @@
       <span style="color: green; font-weight: bold;">green circle</span>).
     </p>
     <p>
-      Logged userEntity can add single vessels to track them individually (having additional info about them).
+      Logged user can add single vessels to track them individually (having additional info about them).
     </p>
   </div>
 </div>
