--- a/frontend/src/app/components/popup/popup.component.html
+++ b/frontend/src/app/components/popup/popup.component.html
@@ -1,22 +1,22 @@
 <div class="popup-map">
-  <ng-container [ngTemplateOutlet]="registries.length > 1 ? registries_template : registry_template"></ng-container>
+  <ng-container [ngTemplateOutlet]="groupMarker ? group_marker_template : single_marker_template"></ng-container>
 </div>
 
-<ng-template #registry_template>
-  <div class="popup-map__title">MMSI: {{ registries[0].mmsi }}</div>
+<ng-template #single_marker_template>
+  <div class="popup-map__title">MMSI: {{ singleMarker!.mmsi }}</div>
   <div class="popup-map__timestamp">Last position update:</div>
-  <div>{{ moment(registries[0].pointInTime.timestamp).format('DD-MM-YYYY HH:mm:ss') }}</div>
+  <div>{{ moment(singleMarker!.timestamp).format('DD-MM-YYYY HH:mm:ss') }}</div>
   <a
     *ngIf="loggedUser"
     title="Track vessel"
-    (click)="trackVessel(registries[0].mmsi)"
+    (click)="trackVessel(singleMarker!.mmsi)"
     class="popup-map__track material-icons-outlined md-24"
   >add</a>
 </ng-template>
 
-<ng-template #registries_template>
-  <div class="popup-map__title">Ships in region ({{ registries.length }}):</div>
+<ng-template #group_marker_template>
+  <div class="popup-map__title">Ships in region ({{ groupMarker!.mmsis.length }}):</div>
   <div class="popup-map__list">
-    <div *ngFor="let registry of registries">{{ registry.mmsi }}</div>
+    <div *ngFor="let mmsi of groupMarker!.mmsis">{{ mmsi }}</div>
   </div>
 </ng-template>
