Changed way to track public vessels

--- a/frontend/src/app/components/panels/app-panel/app-panel.component.html
+++ b/frontend/src/app/components/panels/app-panel/app-panel.component.html
@@ -13,7 +13,7 @@
       <td>{{ vessel.mmsi }}</td>
       <td>
         <a title="Info" class="material-icons-outlined md-24">info</a>
-        <a title="Adjust" class="material-icons-outlined md-24">adjust</a>
+        <a (click)="adjust(vessel)" title="Adjust" class="material-icons-outlined md-24">adjust</a>
         <a title="Suspend" class="material-icons-outlined md-24">remove_circle</a>
         <a title="Remove" class="material-icons-outlined md-24">delete_forever</a>
       </td>
