--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,5 +5,5 @@
   <router-outlet></router-outlet>
 </div>
 <div [ngClass]="isPanelShown ? 'app__map-show' : 'app__map-hide'">
-  <app-map (isMapReadyEvent)="subscribeToMapReadiness($event)" [resizeMapSubject]="isPanelShownSubject"></app-map>
+  <app-map [resizeMapSubject]="isPanelShownSubject"></app-map>
 </div>
