--- a/frontend/src/app/components/panels/app-panel/app-panel.component.html
+++ b/frontend/src/app/components/panels/app-panel/app-panel.component.html
@@ -6,16 +6,19 @@
   </div>
   <table *ngIf="vessels.length > 0" style="width: 90%; margin: 0 auto;">
     <tr>
-      <th>MMSI</th>
+      <th style="width: 50%;">MMSI</th>
       <th>Actions</th>
     </tr>
     <tr *ngFor="let vessel of vessels">
       <td>{{ vessel.mmsi }}</td>
-      <td>
+      <td *ngIf="!vessel.isSuspended">
         <a title="Info" class="material-icons-outlined md-24">info</a>
         <a (click)="adjust(vessel)" title="Adjust" class="material-icons-outlined md-24">adjust</a>
-        <a title="Suspend" class="material-icons-outlined md-24">remove_circle</a>
-        <a title="Remove" class="material-icons-outlined md-24">delete_forever</a>
+        <a (click)="suspend(vessel.mmsi)" title="Suspend" class="material-icons-outlined md-24">remove_circle</a>
+        <a (click)="remove(vessel.mmsi)" title="Remove" class="material-icons-outlined md-24">delete_forever</a>
+      </td>
+      <td *ngIf="vessel.isSuspended">
+        <a (click)="track(vessel.mmsi)" title="Resume tracking" class="material-icons-outlined md-24">play_arrow</a>
       </td>
     </tr>
   </table>
