Commited current state - error with subscriptions

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,6 @@
 @import 'node_modules/material-icons/iconfont/material-icons.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;700&display=swap');
+@import '~ngx-toastr/toastr';
 
 body, html {
   margin: 0;
