--- a/frontend/src/app/components/panels/app-panel/app-panel.component.html
+++ b/frontend/src/app/components/panels/app-panel/app-panel.component.html
@@ -2,22 +2,55 @@
   <h1>Tracked Vessels</h1>
   <div *ngIf="vessels.length == 0">
     <div>No tracked vessels</div>
-    <div style="margin-top: 5px;">Choose vessel on map and add some.</div>
+    <div class="app-panel__info">Choose vessel on map and add some.</div>
   </div>
-  <table *ngIf="vessels.length > 0" style="width: 90%; margin: 0 auto;">
+  <table *ngIf="vessels.length > 0" class="app-panel__table">
     <tr>
-      <th style="width: 50%;">MMSI</th>
+      <th class="app-panel__table-mmsi">MMSI</th>
       <th>Actions</th>
     </tr>
     <tr *ngFor="let vessel of vessels">
       <td>{{ vessel.mmsi }}</td>
       <td>
-        <a title="Info" class="material-icons-outlined md-24">info</a>
+        <a (click)="openInfoModal(vessel)" title="Info" class="material-icons-outlined md-24">info</a>
         <a (click)="adjust(vessel)" title="Adjust" class="material-icons-outlined md-24">adjust</a>
-        <a *ngIf="!vessel.isSuspended" (click)="suspend(vessel.mmsi)" title="Suspend" class="material-icons-outlined md-24">remove_circle</a>
-        <a *ngIf="vessel.isSuspended" (click)="track(vessel.mmsi)" title="Resume tracking" class="material-icons-outlined md-24">play_arrow</a>
+        <a *ngIf="!vessel.isSuspended" (click)="suspend(vessel.mmsi)" title="Suspend"
+           class="material-icons-outlined md-24">remove_circle</a>
+        <a *ngIf="vessel.isSuspended" (click)="track(vessel.mmsi)" title="Resume tracking"
+           class="material-icons-outlined md-24">play_arrow</a>
         <a (click)="remove(vessel.mmsi)" title="Remove" class="material-icons-outlined md-24">delete_forever</a>
       </td>
     </tr>
   </table>
 </div>
+
+<ngx-smart-modal customClass="nsm-dialog-animation-rtl" #vesselInfoModal identifier="vesselInfoModal">
+  <div *ngIf="vesselInfoModal.hasData()" class="modal-vessel-info">
+    <h1
+      [ngClass]="vesselInfoModal.getData().isSuspended ? 'modal-vessel-info__title-suspended' : 'modal-vessel-info__title-tracked'"
+    >{{ vesselInfoModal.getData().mmsi }}</h1>
+    <ng-container *ngFor="let track of vesselInfoModal.getData().tracks; let i = index">
+      <table class="modal-vessel-info__table">
+        <tr>
+          <th>Timestamp</th>
+          <th>Latitude</th>
+          <th>Longitude</th>
+        </tr>
+        <ng-container *ngFor="let point of track.pointsInTime">
+          <tr>
+            <td>{{ point.timestamp | date: 'YYYY-MM-dd HH:mm:ss' }}</td>
+            <td>{{ point.coordinates.latitude }}</td>
+            <td>{{ point.coordinates.longitude }}</td>
+          </tr>
+        </ng-container>
+      </table>
+      <hr *ngIf="i !== vesselInfoModal.getData().tracks.length - 1">
+    </ng-container>
+  </div>
+  <div *ngIf="!vesselInfoModal.hasData()" class="modal-vessel-info">
+    Nothing here!
+  </div>
+  <div class="modal-vessel-info__footer">
+    <button class="modal-vessel-info__footer-button" (click)="vesselInfoModal.close()">Close</button>
+  </div>
+</ngx-smart-modal>
