--- a/frontend/src/app/components/panels/login-panel/login-panel.component.scss
+++ b/frontend/src/app/components/panels/login-panel/login-panel.component.scss
@@ -13,24 +13,21 @@
   text-align: center;
   font-size: 1.5rem;
 
+  &__label {
+    display: inline-block;
+    margin-top: 20px;
+  }
+
   &__email {
     @extend .login-input;
-
-    &-label {
-      @extend .login-label;
-    }
   }
 
   &__password {
     @extend .login-input;
-
-    &-label {
-      @extend .login-label;
-    }
   }
 
   &__login-button {
-    margin-top: 10px;
+    margin-top: 20px;
     height: 50px;
     min-width: 100px;
     max-width: 200px;
@@ -47,11 +44,30 @@
       transition: .2s ease;
     }
   }
+
+  &__addition {
+    display: block;
+    margin-top: 15px;
+    font-size: 1.2rem;
+    text-decoration: underline;
+    cursor: pointer;
+    transition: .2s ease;
+
+    &:hover {
+      color: #afb0cb;
+    }
+  }
+
+  &__error {
+    margin: 5px 0 0;
+    font-size: .8rem;
+    color: #ff4646;
+  }
 }
 
 .login-input {
   display: block;
-  margin: 15px auto;
+  margin: 0 auto;
   background: transparent;
   height: 40px;
   width: 70%;
@@ -65,8 +81,4 @@
   &:focus {
     outline: 0;
   }
-}
-
-.login-label {
-
 }
